--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
           class="flex-1 justify-between navbar lg:grid lg:grid-cols-[20%_55%_25%]"
         >
           <div class="flex items-center justify-center">
-            <a class="btn bg-lime-400 text-black px-6 mx-2 text-lg">Blog</a>
+            <a
+              href="question.html"
+              class="btn bg-lime-400 text-black px-6 mx-2 text-lg"
+              >Blog</a
+            >
           </div>
           <div
             class="navbar-center hidden lg:flex items-center justify-center sm:hidden"
