--- a/question.html
+++ b/question.html
@@ -39,6 +39,7 @@
         >
           <div class="flex items-center justify-center">
             <a
+              href="index.html"
               class="btn bg-lime-400 text-black px-5 mx-2 text-lg hover:bg-lime-700 hover:text-white"
               >Home</a
             >
