font-size changes

--- a/question.html
+++ b/question.html
@@ -32,7 +32,7 @@
     </style>
   </head>
   <body class="font-poppins mx-0 max-[100]:">
-    <header class="md:container mx-auto sticky top-0 z-50">
+    <header class="md:container mx-0 p-0 sticky top-0 z-50">
       <nav class="bg-yellow-50">
         <div
           class="flex-1 justify-between navbar lg:grid lg:grid-cols-[20%_55%_25%]"
