--- a/question.html
+++ b/question.html
@@ -1,10 +1,11 @@
+<!---->
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>E-Donation</title>
-    <!-- Google Font CDN -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -40,15 +41,25 @@
           <div class="flex items-center justify-center">
             <a
               href="index.html"
-              class="btn bg-lime-400 text-black px-5 mx-2 text-lg hover:bg-lime-700 hover:text-white"
+              class="btn bg-lime-400 text-black px-5 py-2 mx-2 text-lg hover:bg-lime-700 hover:text-white hidden lg:inline-block"
               >Home</a
             >
+
+            <a
+              href="index.html"
+              class="btn bg-yellow-50 text-black px-5 mx-2 text-2xl lg:hidden"
+              ><i class="fa-solid fa-house"></i
+            ></a>
           </div>
+
           <div
             class="navbar-center hidden lg:flex items-center justify-center sm:hidden"
           >
             <img src="./assets/logo.png" />
             <span class="px-2 text-4xl font-bold">E-Donation</span>
+          </div>
+          <div class="navbar-center lg:hidden">
+            <span class="px-2 text-3xl font-bold">E-Donation</span>
           </div>
           <div class="hidden lg:flex items-center justify-center">
             <a class="flex items-center text-black px-3 rounded-full mx-2">
@@ -62,6 +73,7 @@
         <br />
       </nav>
     </header>
+
     <br />
     <div class="text-black text-center py-4">
       <h1 class="text-3xl font-bold">Important FAQ</h1>
@@ -186,3 +198,4 @@
   </body>
   <footer class="bg-yellow-50"></footer>
 </html>
+-->
